@@ -1,0 +1,12 @@
+Title: Tolerate debug output in check plugins when using CMC
+Level: 1
+Component: core
+Version: 1.2.4b1
+Date: 1387369455
+Class: fix
+
+When using the Check_MK Micro Core and at the same time check plugins output
+debug information to stdout, the communication with the core was garbled
+up and the check helper died with an exception. This fix eliminates any
+unauthorized output to stdout be removing the filedescriptor to a save place
+and replacing stdout with <tt>/dev/null</tt>.
