@@ -5,6 +5,7 @@
     * 0313 FIX: Avoid duplicate reading of configuration file on --create-rrd...
     * 0379 FIX: check_mk -c: Now also rewrites the location of conf.d directory
     * 0354 FIX: Catch exception when check plugins do not return a state...
+    * 0398 FIX: Tolerate debug output in check plugins when using CMC...
 
     Checks & Agents:
     * 0306 esx_vsphere_counters: added missing ramdisk levels sfcbtickets
